--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -58,12 +58,23 @@ header {
 
     .user-logo{
         cursor: pointer;
-        width: 35px;
-        height: 35px;
+        width: 38px;
+        height: 38px;
         border-radius: 50%;
         padding-left: 0px;
         margin-left: 8px;
-        
+        margin-right: 8px;
+        border: 3px solid rgb(88, 218, 56);
+    }
+    .user-logo-logout{
+        cursor: pointer;
+        width: 38px;
+        height: 38px;
+        border-radius: 50%;
+        padding-left: 0px;
+        margin-left: 8px;
+        margin-right: 8px;
+        border: 3px solid rgb(218, 121, 56);
     }
     .pressed{
         opacity: 0.3;
@@ -103,6 +114,14 @@ header {
     //     padding-left: 180px;
     //     padding-right: 100px;
     // }
+    .about:hover{
+        opacity: 0.4;
+    }
+    .about{
+        display:inline-flex;
+        width: 35px;
+        margin-left: 20px;
+    }
 
 
     .modal-container{
