--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -41,5 +41,6 @@
 @import "views/login-signup";
 @import "views/story-app";
 @import "views/user-details";
+@import "views/story-about";
 
 @import "./app";
