--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -3,7 +3,7 @@
 }
 .main{
     //position: relative;
-    margin: 30px 0;
+    margin: 30px  0 ;
 }
 .story-father{
     position: relative;
@@ -12,7 +12,7 @@
     border: 1px solid #dbdbdb;
     background-color: #fff;
     box-shadow: 5px 5px 8px 3px #d8d5d5be;    
-    max-width: 616px;
+    width: 45vw;
     overflow: hidden;
     border-radius: 3px;
     font-size: 13px;
@@ -24,8 +24,8 @@
     .post-details {
         padding-right: 0px;
         // max-width: 450px;
-        width:60%;
-        padding-left: 55px;
+        width: 80vw;
+        padding-left: 0px;
         // overflow: hidden;
         border-radius: 3px;
         font-size: 13px;
@@ -64,8 +64,7 @@
     display: flex;
     justify-content : space-between;
     -webkit-box-pack: justify;
-    width: 614px;
-    height: 64px;
+   
     // display: inline;
 }
 .post-details-router{
