--- a/src/assets/styles/cmps/comment-input.scss
+++ b/src/assets/styles/cmps/comment-input.scss
@@ -45,6 +45,7 @@
         padding: 0px 3px 0px 5px;
         font-size: small;
         flex-direction: row;
+        width: inherit;
     }
 
     .comment-input-preview{
