--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -6,7 +6,7 @@
 
     box-shadow: 5px 10px 10px 100vh #888888be;    
     height: 500px;
-    width: 900px;
+    width: 65vw;
     top: 50px;
     left: 200px;
     z-index: 22;
@@ -17,7 +17,7 @@
   .story-preview-modal-content{
       
     display: flex;
-    // flex-direction: row;
+  
       height: 100%;
   }
 
@@ -48,4 +48,25 @@
     border-left-style: outset;
     padding-left: 0px;
    
+}
+
+
+@media (max-width: 600px){
+  .story-preview-modal{
+    height: fit-content;
+    left: 15vw;
+    top: 4.5vh;
+  }
+
+
+    
+  .story-preview-modal-content{
+    flex-direction: column;
+  }
+
+
+  .story-preview-modal-img-container{
+    height: 40vh;
+  }
+
 }
