--- a/src/assets/styles/views/_story-app.scss
+++ b/src/assets/styles/views/_story-app.scss
@@ -4,13 +4,13 @@
 //  }
 
 
-.main-layout{
-    margin: 0 auto;
-    max-width: 980px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
+// .main-layout{
+//     margin: 0 auto;
+//     max-width: 980px;
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
 
 
  .story-app-container{
