--- a/src/assets/styles/cmps/comment-input.scss
+++ b/src/assets/styles/cmps/comment-input.scss
@@ -16,6 +16,7 @@
         color: #8e8e8e;
         background: transparent;
         padding:12px ;
+        font-family: 'Segoe UI Historic', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .comment-smiley-btn{
