--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -218,29 +218,36 @@ img{
     bottom: 0;
     border-radius: 15px 0px 0 15px ;
 }
-.most-popular{
-    width: 300px;
+.smily-most-popular{
+    width: 20vw;
     font-size: large;
     color: rgb(155, 152, 152);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 10px;
+    padding: 0.5vw;
+    text-align: center;
 }
 .inner-smily-modal{
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-direction: column;  
     padding-left: 10px;
     padding-right: 0;
-    width: 100%;
+    width: 20vw;
     height: 70%;
 }
 
-.grid{
+.grid-container{
+    display: flex;
+    justify-content: center;
+    padding-bottom:  20px;   
+}
+
+.smily-grid{
     width: 80%;
     height: 80%;
     display: grid;
-    grid-template-columns: 70px  70px 70px 70px;
-    grid-template-rows: 60px 60px 60px ;
+    grid-template-columns: repeat(4,1fr);
+    // grid-template-rows: 60px 60px 60px ;
+    grid-gap: 1.5vw;
     padding: 0;  
 }
 .smily-btn{
@@ -259,4 +266,5 @@ img{
 }
 .comment-input{
     font-size: large;
+    font-family: 'Segoe UI Historic', Tahoma, Geneva, Verdana, sans-serif;
 }
