--- a/src/assets/styles/views/_user-details.scss
+++ b/src/assets/styles/views/_user-details.scss
@@ -8,17 +8,17 @@
     grid-gap: 0px;
     padding: 10px 10px 10px 0px;
     min-height: 100vh;
-  
+    width: 100vw;
 
 
 
 }
 .profile{
-  width: 100%;
+ 
   display: flex;
   justify-content: center;
   border-bottom:1px solid $clr2; ;
-  padding: 0px 100px 20px 0px;
+  
   box-sizing: border-box;
 }
 
@@ -73,8 +73,9 @@
     display: inline;
     padding-top: 100%;
     background: green;
-    height: 100%;
-    width: 100%;
+  
+  
+   width: 100%;
   }
 
   .details-stories-img{
@@ -235,9 +236,9 @@
    .profile{
     // padding-left: 20x;
    // display: -webkit-box;
-   display: flex;
+    display: flex;
     justify-content: center;
-    padding: 0px 0px 0px 120px;
+    width: 100vw;
   }
 
   .profile-posts{
@@ -248,6 +249,9 @@
     width: 85%;
     padding-right: 180px;
    
+ }
+ .profile-posts-item{
+  width: 40vw;
  }
 
 .details-img{
@@ -266,7 +270,8 @@
   -ms-flex-direction: column;
   flex-direction: column;
   text-align: left;
-  padding: 3px 3px 3px 15px;
+  padding:  0;
+
   
   font-size: x-small;
 }
@@ -288,7 +293,7 @@
 .profile-description-top{
   padding: 15px 0 1px 20px;
   font-size: 15px;
-  width: 510px;
+  width: 70vw;
   height:  69px;
 }
 
@@ -316,5 +321,7 @@
 .profile-tabs-tab{
   padding-left: 0px
 }
+ .details-stories-img{
 
+ }
 }
