--- a/src/assets/styles/cmps/comment-input.scss
+++ b/src/assets/styles/cmps/comment-input.scss
@@ -15,6 +15,7 @@
         resize: none;
         color: #8e8e8e;
         background: transparent;
+        font-size: 1.3vw;
         padding:12px ;
         font-family: 'Segoe UI Historic', Tahoma, Geneva, Verdana, sans-serif;
     }
