--- a/src/assets/styles/cmps/_story-chat.scss
+++ b/src/assets/styles/cmps/_story-chat.scss
@@ -1,46 +1,46 @@
-.story-chat-container{
-    // position :absolute;
-    // top: 200px;
-    // left: 50px;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 400px;
-    right: 0px;
-    padding-left: 100px;
-    font-size: 20px;
+.story-chat-container {
+  // position :absolute;
+  // top: 200px;
+  // left: 50px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 400px;
+  right: 0px;
+  padding-left: 10vw;
+  font-size: 20px;
 }
-.ul-chat{
+.ul-chat {
   overflow: auto;
   height: 320px;
   border: 1px solid #dbdbdb;
-  border-width:1px; 
+  border-width: 1px;
   background-color: rgb(253, 253, 253);
-  width: 300px;
+  width: 23vw;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
   padding: 15px;
-  box-shadow: 8px 2px 8px 1px #d8d5d5be;    
-
+  box-shadow: 8px 2px 8px 1px #d8d5d5be;
 }
-.user-container{
+.user-container {
   padding-bottom: 5px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
-.incoming-user-container{
+.incoming-user-container {
   padding-bottom: 5px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-.img-incoming-user-chat{
-  width: 15%;
+.img-incoming-user-chat {
+  width: 3vw;
+  height: 3vw;
   border-radius: 100px;
   padding-left: 5px;
 }
-  
-.txt-incoming-user-chat{
+
+.txt-incoming-user-chat {
   background-color: #f0f2f5;
   padding-left: 10px;
   padding-right: 10px;
@@ -49,18 +49,18 @@
   border-top-left-radius: 6px;
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
-  font-family: 'Segoe UI Historic', Tahoma, Geneva, Verdana, sans-serif;
-
+  font-family: "Segoe UI Historic", Tahoma, Geneva, Verdana, sans-serif;
 }
-.img-user-chat{
+.img-user-chat {
   width: 15%;
+  height: 15%;
   border-radius: 100px;
   padding-right: 5px;
 }
 
-.txt-user-chat{
+.txt-user-chat {
   background-color: rgb(0, 132, 255);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #ffffff;
   padding-left: 10px;
   padding-right: 10px;
@@ -69,66 +69,56 @@
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
-
-  
 }
-.chat-input-container{
+.chat-input-container {
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
-  box-shadow: 5px 5px 8px 3px #d8d5d5be;    
+  box-shadow: 5px 5px 8px 3px #d8d5d5be;
   background-color: #fff;
   padding: 10px 10px 10px 10px;
-  width: 100%;
+  width: 23vw;
 }
-.chat-input{
-  // box-shadow: 5px 5px 8px 3px #d8d5d5be;    
+.chat-input {
+  // box-shadow: 5px 5px 8px 3px #d8d5d5be;
   border-radius: 50px;
   font-size: large;
-  padding: 7px 12px  10px 20px; /// 7 16 9 36
-   width: 280px;
+  padding: 7px 12px 10px 20px; /// 7 16 9 36
+  width: 21vw;
   border: 1px solid #dbdbdb;
-  outline:2px;
+  outline: 2px;
   height: 40px;
   background-color: #f0f2f5;
-
 }
-
-.chat-btn:hover{
+.chat-btn:hover {
   color: rgba(255, 255, 255, 0.479);
   font-weight: 700;
   background-color: rgb(17, 17, 17);
 }
-
-.form-chat-btn-container{
+.form-chat-btn-container {
   display: flex;
   width: inherit;
   justify-content: center;
- 
 }
-
-
-.chat-btn{
-    background: none;
-    background-color: #1877f2;
-    border: none;
-    border-radius: 6px;
-    box-shadow: none;
-    color: #fff;
-    font-size: 20px;
-    font-weight: 600;
-    height: 40px;
-    padding: 0 32px;
-    cursor: pointer;
-    width:13vw;   
-    // border-radius: 6px;
-    // padding-top: 10px;
-    // border: none;
-    // background: none;
-    // font-size: large;
-    // font-weight: 800;
-    // color: rgba(38, 165, 34, 0.966);
-    // border:2px;
-    // outline:2px;
-   
+.chat-btn {
+  background: none;
+  background-color: #1877f2;
+  border: none;
+  border-radius: 6px;
+  box-shadow: none;
+  color: #fff;
+  font-size: 1.5vw;
+  font-weight: 600;
+  // height: 40px;
+  padding: 0.5vw 1.5vw;
+  cursor: pointer;
+  width: 10vw;
+  // border-radius: 6px;
+  // padding-top: 10px;
+  // border: none;
+  // background: none;
+  // font-size: large;
+  // font-weight: 800;
+  // color: rgba(38, 165, 34, 0.966);
+  // border:2px;
+  // outline:2px;
 }
-
