--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -16,6 +16,7 @@
     position: fixed;
     top: 100px;
     right: 23vw;
+    z-index: 999;
 }
 .users-for-chat {
     display: flex;
@@ -31,6 +32,7 @@
         cursor: pointer;
         border: 3px solid rgb(15, 15, 15);
         box-shadow: 5px 5px 8px 3px #d8d5d5be;
+        
     }
 
     .users-txt-for-chat-name{
