--- a/src/assets/styles/cmps/_story-chat.scss
+++ b/src/assets/styles/cmps/_story-chat.scss
@@ -11,14 +11,14 @@
 }
 .ul-chat {
   overflow: auto;
-  height: 320px;
+  height: 55vh;
   border: 1px solid #dbdbdb;
   border-width: 1px;
   background-color: rgb(253, 253, 253);
   width: 23vw;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  padding: 15px;
+  padding: 1vw 0vw 1vw  1vw;
   box-shadow: 8px 2px 8px 1px #d8d5d5be;
 }
 .user-container {
@@ -35,7 +35,7 @@
 }
 .img-incoming-user-chat {
   width: 3vw;
-  height: 3vw;
+  height: 2.5vw;
   border-radius: 100px;
   padding-left: 5px;
 }
@@ -52,8 +52,8 @@
   font-family: "Segoe UI Historic", Tahoma, Geneva, Verdana, sans-serif;
 }
 .img-user-chat {
-  width: 15%;
-  height: 15%;
+  width: 3vw;
+  height: 2.6vw;
   border-radius: 100px;
   padding-right: 5px;
 }
@@ -108,10 +108,10 @@
   color: #fff;
   font-size: 1.5vw;
   font-weight: 600;
-  // height: 40px;
   padding: 0.5vw 1.5vw;
   cursor: pointer;
   width: 10vw;
+  box-shadow: 8px 2px 8px 1px #d8d5d5be;
   // border-radius: 6px;
   // padding-top: 10px;
   // border: none;
