fix some chat  bugs

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -8,6 +8,7 @@
 }
 
 .app {
+    
 }
 #nav {
     padding: 0px 0px 0px 0px;
@@ -58,6 +59,7 @@
         right: 5vw;
         padding-left: 0px;
         font-size: 20px;
+        z-index: 10;
     }
 }
 .btn-absolute-pos {
