--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -17,13 +17,13 @@ html {
 body {
     font-size: rem(18px);
     margin: 0;
-    width: 100vw;
+    // width: 100vw;
 }
 @media screen and (max-width: 600px) {
     body {
         font-size: rem(18px);
         // margin: 0;
-        width: 100vw;
+        // width: 100vw;
     }
 }
 
