--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -14,7 +14,7 @@
 
 .app-center{
     // margin: 0 auto;
-    width: 100vw;
+    // width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
