--- a/src/assets/styles/cmps/_story-preview.scss
+++ b/src/assets/styles/cmps/_story-preview.scss
@@ -1,9 +1,8 @@
 * {
     box-sizing: border-box;
 }
-.main{
-    //position: relative;
-    margin: 30px  0 ;
+.preview-main{
+    margin: 5vh  0 ;
 }
 .story-father{
     position: relative;
@@ -18,6 +17,7 @@
     font-size: 13px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;    //from asi  
+  
 }
 
 @media (max-width: 600px){
@@ -126,27 +126,6 @@
 // border: 0;
 
 }
-// .test{
-//     width: 100vw;
-//     border: 5px outset gray;
-//     z-index: 5;
-
-//     color: black;
-//     background-color: pink;
-//     display: flex;
-
-//     background-color: pink;
-//     display: flex;
-//     margin-left: calc(-.5 * var(--child-width) + 50%);
-//     width: var(--child-width);
-
-// }
-// .wide {
-//     margin-left: calc(-37.5vw + 50%);
-//     width: 75vw;
-//     --child-width: 75vw;
-//  }
-
 
 .post-like-btn{
     color: #262626;
