--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -17,7 +17,7 @@
     position: fixed;
     top: 100px;
     right: 23vw;
-    z-index: 999;
+    // z-index: 999;
 }
 .users-for-chat {
     display: flex;
