--- a/src/assets/styles/cmps/_smiley-modal.scss
+++ b/src/assets/styles/cmps/_smiley-modal.scss
@@ -1,7 +1,6 @@
 .inner-smiley-modal{
     display: flex;
     flex-direction: column;
- 
     padding-left: 0px;
     padding-right: 0;
     width: 100%;
@@ -10,7 +9,7 @@
 
 .most-popular{
     width: 20vw;
-    font-size: large;
+    font-size: 1.3vw;
     color: rgb(155, 152, 152);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding: 0.5vw; 
@@ -19,8 +18,7 @@
 .grid-container{
     display: flex;
     justify-content: center;
-    padding-bottom:  20px; 
-   
+    padding-bottom:  20px;   
 }
 .grid-smiley{
     width: 80%;
@@ -28,19 +26,21 @@
     display: grid;
     grid-template-columns: repeat(4,1fr);
     grid-template-rows: (3,1fr);
-    grid-gap: 1vw;
+    grid-gap: 0.5vw;
     // grid-template-columns: 70px  70px 70px 70px;
     // grid-template-rows: 60px 60px 60px ;
     padding: 0;  
 }
 
 
-.smily-img{
+.smiley-img-modal-container{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 33px;
-    height: 33px;
-    cursor: pointer;
-  
+    cursor: pointer; 
+}
+
+.smiley-img-modal{
+    width: 2vw;
+    height: 2vw;
 }
