`Update story-preview-modal-container.scss: adjust position and size properties`

--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -7,8 +7,8 @@
     box-shadow: 5px 10px 10px 100vh #888888be;    
     height: 500px;
     width: 65vw;
-    top: 50px;
-    left: 200px;
+    top: 10vh;
+    left: 15vw;
     z-index: 22;
     position: fixed;
     background-color: #fff;
