`Updated styles and layout for app header and story preview modal container`

--- a/src/assets/styles/cmps/story-preview-modal-container.scss
+++ b/src/assets/styles/cmps/story-preview-modal-container.scss
@@ -12,6 +12,7 @@
     z-index: 22;
     position: fixed;
     background-color: #fff;
+    border-radius: 8px;
   }
 
   .story-preview-modal-content{
