--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -90,6 +90,7 @@ header {
     .instagram-router-link {
         color: #262626;
         text-decoration: none;
+        padding-right: 2vw;
     }
     .login-router-link {
         text-decoration: none;
@@ -108,6 +109,8 @@ header {
     }
     .logo-container{
         display: flex;
+        padding-right: 1vw;
+        
     //     width:636px ;
     //     padding-left: 180px;
     //     padding-right: 100px;
@@ -147,25 +150,41 @@ header {
         align-items: center;
         width: 636px;
         max-width: 50%;
-        padding-left: 170px;
-        padding-right: 10px;
+        padding-left: 17px;
+        padding-right: 5vw;
     }
     .search-container {
         position: relative;
-        padding: 10px 10px 20px 10vw;
+        padding: 10px 10px 20px 5vw;
         width: 20vw;
         display: inline;
         // height: 28px;
     }
-    
+            header{
+                nav {
+            width: 100%;
+            // background-color: $clr4;
+            padding: 0px 10px 10px 10vw;
+            height: 5vh;
+        }
+    }
 }
 
-// @media screen and (max-width: 1100px) {
-//     nav{
-//         padding-left: 0;
-//     }
+@media screen and (max-width: 1100px) {
+        header{
+            padding-left: 10vw;
+                nav {
+            width: 100%;
+            // background-color: $clr4;
+            padding: 10px 50px 50px 5vw;
+            height: 7vh;
+        }
+        .logo-container {
+            padding-right: 1vw;
+        }
+    }
 
-// }
+}
 
 
 
@@ -182,7 +201,7 @@ header {
             width: 100%;
             // background-color: $clr4;
             padding: 0px 10px 10px 10vw;
-            height: 60px;
+            height: 5vh;
         }
         .header-links {
             // display: inline;
